Fix spacing in dijitPopupMenus

--- a/css/menubar.scss
+++ b/css/menubar.scss
@@ -131,7 +131,7 @@ a.topLink, a.topLink * {
     background: url("../img/spriteArrows.png") no-repeat scroll -56px center;
 }
 
-.globalMenu .dijitMenuItem td {
+&.globalMenu .dijitMenuItem td {
     padding: 0.5em 2px 0.5em 5px;
 }
 
